fixed css; it works on iphone 4s/safari/chrome and ics now

--- a/public/css/todos.css
+++ b/public/css/todos.css
@@ -2,21 +2,14 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+  border:0;
 }
 
 body {
-	font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
-	line-height: 1.2em;
+	font: 12px;
 	background: #333;
-	margin: 0 auto;
-	-webkit-font-smoothing: antialiased;
-}
-
-#todoapp {
-  position:absolute;z-index:2;
-  top:30px;
-  width:100%;
-  height:100%;
+  -webkit-user-select:none;
+  -webkit-text-size-adjust:none;
 }
 
 #header {
@@ -47,8 +40,7 @@ body {
 }
 
 #status {
-  position:absolute;z-index:2;
-  top:21px; left:0;
+  position:relative;z-index:2;
   padding:0;
   width:100%;
   height:25px;
@@ -65,8 +57,7 @@ body {
 }
 
 #main {
-  position:absolute;z-index:2;
-  top:45px; left:0px;
+  position:relative;z-index:2;
   width:100%;
 	display: none;
   background-color:#fafafa;
